# CleverHand-interface

./: .clang-format  .gitignore  .gitmodules  CMakeConfig.txt  CMakeFunctions.txt  CMakeLists.txt  CMakePython.txt  README.md
include/: clvHdController.hpp  clvHdEMG.hpp  clvHdMaster.hpp  pyclvhd.hpp  registers.hpp
script/: example.py
src/: clvHdController.cpp  clvHdEMG.cpp  clvHdMaster.cpp  main.cpp  main_lsl.cpp  post_processing.asv  post_processing.m  pyclvhd.cpp
src/CleverHand-interface/: CleverHand-interface.ino
src/uctrl_master/: clvHd_util.hpp  com.hpp  uctrl_master.ino
